# PRACTICE_BACKEND_1

./: .gitignore  docker-compose.yml  pyproject.toml
application/: .env.template  main.py
application/core/: config.py
application/core/models/: __init__.py  base.py  db_helper.py
application/utils/: __init__.py  case_converter.py
